[metadata]
name = mddw-envs
version = 0.0.1
description = Gymnasium environments for use in the model driven discovery workshop series 

[options]
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    gymnasium>0.26.0
    samplemetamodel @ git+https://github.com/Model-Driven-Discovery-Workshop/samplemetamodel
    covasimmetamodels @ git+https://github.com/Model-Driven-Discovery-Workshop/covasimmetamodels
